@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0


class VotesController {
    +findAllReviews(String sku): Product
}

class VoteService {
    +findAllReviewsWithVotes(String sku): Product
}

interface ProductRepository <<interface>>{
    +findBySkuProduct(String sku): Product

}

interface ReviewRepository <<interface>>{
    +findAllWithVotes(String sku): List<Review>

}

class Review {
    - idReview
    - status
    - text
    - rating
    - Date
}

class Product {
    - name
    - description
    - SKU
    - barCode
}

VotesController ..> VoteService: uses
VoteService ..> ReviewRepository: uses
VoteService ..> ProductRepository: uses
ReviewRepository "1" --> "0..*" Review:  records
ProductRepository "1" --> "0..*" Product:  records

@enduml
